--- a/src/Hero.css
+++ b/src/Hero.css
@@ -9,9 +9,11 @@ img.hero-bg {
 }
 
 .hero-text {
+  color: white;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-shadow: 1px 1px 1px #000, 3px 3px 5px blue; 
 }
