--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,9 +1,11 @@
+.hero {
+  display: block;
+}
+
 img.hero-bg {
-  min-height: 100%;
-  min-width: 100%;
   width: 100%;
-  height: auto;
-  position: fixed;
+  max-height: 60%;
+  position: flex;
   top: 0;
   left: 0;
   opacity: 0.75;
