--- a/src/LeftArrow.css
+++ b/src/LeftArrow.css
@@ -1,11 +1,14 @@
-.slider-arrow-left {
+.slider-arrow {
   position: absolute;
   top: 50%;
-  left: 32px;
   display: block;
   color: #111;
   cursor: pointer;
   opacity: .75;
   transform: translateY(-50%);
   transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
+}
+
+.left {
+  left: 32px;
 }
