--- a/src/RightArrow.css
+++ b/src/RightArrow.css
@@ -1,11 +1,16 @@
-.slider-arrow-right {
+.slider-arrow {
   position: absolute;
+  padding-top: auto;
+  padding-bottom: auto;
   top: 50%;
-  right: 32px;
   display: block;
   color: #111;
   cursor: pointer;
   opacity: .75;
   transform: translateY(-50%);
   transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
+}
+
+.right {
+  right: 32px;
 }
