--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,5 +1,6 @@
 .hero {
   display: block;
+  position: relative;
 }
 
 img.hero-bg {
@@ -11,12 +12,72 @@ img.hero-bg {
   opacity: 0.75;
 }
 
-.hero-text {
+.hero-content {
   color: white;
-  text-align: center;
   position: absolute;
+  width: 60%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-shadow: 1px 1px 1px #000, 3px 3px 5px blue; 
 }
+
+.hero-content > h1, p {
+  text-align: center;
+  font-size: 3em;
+  text-shadow: 1px 1px 1px #000, 3px 3px 3px #666;
+}
+
+.name {
+  color: #E8CFBA;
+}
+
+a.page-link-btn {
+  width: 50%;
+  height: 100%;
+  margin: 10% auto;
+  padding: 1em 1em 1em 1.5em;
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  color: #eeeeee;
+  background-color: #9F9C6C;
+  vertical-align: middle;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.page-link-btn:hover, .page-link-btn:focus {
+  background-color: #635F29;
+  text-shadow: 1px 1px 1px #000, 2px 2px 2px #fff; 
+}
+
+.btn-content {
+  width: 100%;
+  border: 1px solid gray;
+  border-radius: 6px;
+  display: table-cell;
+  margin: 3%;
+  padding: 3%;
+}
+
+.btn-text {
+  vertical-align: middle;
+  text-align: center;
+  height: 50%;
+  width: 79%;
+  display: inline-flex;
+  font-size: 1.5em;
+  line-height: 1em;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.arrow-icon {
+  width: 20%;
+  vertical-align: middle;
+  line-height: inherit!important;
+  display: inline-flex;
+  top: 50%;
+  transition: transform 0.02s;
+}
+
