--- a/src/SliderArrow.css
+++ b/src/SliderArrow.css
@@ -1,12 +1,14 @@
+.arrow-container {
+  display: inline-block;
+  width: 6%;
+  padding: 2%;
+  /* transform: translate(-50%, -50%);*/
+} 
+
 .slider-arrow {
-  position: absolute;
-  width: 8%;
-  height: 100%;
-  text-align: center;
-  color: #111;
+  height: 6em;
   cursor: pointer;
   opacity: .5;
-  transform: translateY(-50%);
   transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
   box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, .3);
 }
@@ -16,11 +18,11 @@
 }
 
 .right {
-  right: 32px;
+  right: 22%;
 }
 
 .left {
-  left: 32px;
+  left: 2%;
 }
 
 .bounce-left {
