--- a/src/SliderArrow.css
+++ b/src/SliderArrow.css
@@ -1,5 +1,8 @@
 .arrow-container {
   display: inline-block;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
   width: 6%;
   padding: 2%;
   /* transform: translate(-50%, -50%);*/
@@ -8,6 +11,7 @@
 .slider-arrow {
   height: 6em;
   cursor: pointer;
+ 
   opacity: .5;
   transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
   box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, .3);
