--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,6 +1,46 @@
 .flex {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
+
+nav{
+  background-color: #F5F9E1;
+  width: 100%;
+  height: 4em;
+}
+
+.link-wrap {
+  position: initial;
+  text-align: left;
+}
+
+nav .link-wrap {
+  width: 100%;
+  top: 53px;
+  cursor: pointer;
+  text-transform: uppercase;
+
+}
+
+nav .active {
+  color: #6D5775;
+  text-shadow: 1.3px 1.3px 2.1px #85758B, 0 0 1em #C7C3C9, 0 0 0.2em #C7C3C9;
+}
+
+.page-link {
+  color: #9F96A3;
+  display: inline-flex;
+  text-decoration: none;
+  font-size: 1.1em;
+  font-weight: 100;
+  margin: 0 2%;
+  padding: 0 auto;
+  transition: color 0.5s;
+}
+
+.page-link:hover {
+  color: #6D5775;
+  text-shadow: #FFE064 1px 0 10px;
+} 
