--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serifs;
   height: 100%;
+}
+
+@media screen and (min-width: 600px) {
+  body {
+    font-size: 12pt;
+  }
 }
