--- a/src/Slide.css
+++ b/src/Slide.css
@@ -26,20 +26,62 @@
   width: 100%;
 }
 
-#gallery .text {
-  z-index: 2;
-  text-align: center;
-  opacity: 1;
-  transition: opacity 500ms;
-  color: #fff;
+.card {
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+}
+
+#gallery .card-text {
+  opacity: 0;
+  width: 100%;
+  height: 20%;
   top: 0;
   left: 0;
+  z-index: 2;
+  background-color: #E5B495;
+  color: #fff;
+  text-align: center;
   position: absolute;
-  width: 100%;
+  transition: all 0.5s;
 
 }
 
-#gallery .card:hover .text {
+.highlight {
+  font-size: 0.8em;
+  font-weight: 100;
+  font-style: italic;
+}
+
+#gallery .card:hover .flex.card-text {
   opacity: 1;
   top: 24%;
+}
+
+
+ a.card-button {
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  bottom: 0;
+  width: 25%;
+  height: 13%;
+  margin: 0 auto;
+  border-radius: 10px;
+  background-color: transparent;
+  border: 2px solid #E5B495;
+  justify-content: center;
+  color: #666;
+  text-decoration: none;
+  transition: all 0.5s;
+  
+}
+
+a.card-button:hover {
+  background-color: #E5B495;
+  color: #FFF;
+  bottom: 24%;
 }
