--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 @media screen and (min-width: 600px) {
-  
+
   .container {   
     
   }
@@ -107,7 +107,8 @@ section:nth-of-type(1) {
 }
 
 .bold {
-
+  font-size: 2em;
+  font-weight: 600;
 }
 
 .slide-in-left {
