--- a/src/Slide.css
+++ b/src/Slide.css
@@ -1,6 +1,4 @@
 .slide {
-  margin-right: auto;
-  margin-left: auto;
   height: 100%;
   width: 100%; 
   max-width: 900px;
@@ -45,7 +43,10 @@
   text-align: center;
   position: absolute;
   transition: all 0.5s;
+}
 
+.card-text .bold {
+  font-size: 2em;
 }
 
 .highlight {
