--- a/src/SliderArrow.css
+++ b/src/SliderArrow.css
@@ -1,32 +1,17 @@
 .arrow-container {
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 6%;
-  padding: 2%;
-  /* transform: translate(-50%, -50%);*/
+  height: 100%;
+  width: 4%;
 } 
 
 .slider-arrow {
-  height: 6em;
+  height: 100%;
   cursor: pointer;
- 
-  opacity: .5;
-  transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
-  box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, .3);
+  opacity: .4;  
 }
 
 .slider-arrow:hover {
-  opacity: .99;
-}
-
-.right {
-  right: 22%;
-}
-
-.left {
-  left: 2%;
+  opacity: 1;
+  box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, .3);
 }
 
 .bounce-left {
