--- a/src/Slide.css
+++ b/src/Slide.css
@@ -38,7 +38,9 @@
   top: 0;
   left: 0;
   z-index: 2;
-  background-color: #E5B495;
+  background-color: #E1DDA9;
+  border-top: 2px solid #857698;
+  border-bottom: 2px solid #857698;
   color: #fff;
   text-align: center;
   position: absolute;
@@ -49,17 +51,11 @@
   font-size: 2em;
 }
 
-.highlight {
+.blurb {
   font-size: 0.8em;
   font-weight: 100;
   font-style: italic;
 }
-
-#gallery .card:hover .flex.card-text {
-  opacity: 1;
-  top: 24%;
-}
-
 
  a.card-button {
   opacity: 0;
@@ -73,16 +69,15 @@
   margin: 0 auto;
   border-radius: 10px;
   background-color: transparent;
-  border: 2px solid #E5B495;
+  border: 2px solid #857698;
   justify-content: center;
   color: #666;
   text-decoration: none;
   transition: all 0.5s;
-  
 }
 
 a.card-button:hover {
-  background-color: #E5B495;
+  background-color: #857698;
   color: #FFF;
   bottom: 24%;
 }
