--- a/src/Hero.css
+++ b/src/Hero.css
@@ -4,6 +4,11 @@
   border-bottom: 3px solid #6D5775;
 }
 
+.hero-image {
+  width: 100%;
+  height: 100%;
+}
+
 img.hero-bg {
   width: 100%;
   max-height: 60%;
@@ -29,7 +34,8 @@ img.hero-bg {
 }
 
 .name {
-  color: #E8CFBA;
+  color: #E5C8B2;
+  text-shadow: 1px 1px 1px #000, 5px 5px 6px #f4f8dd;
 }
 
 a.page-link-btn {
@@ -37,26 +43,33 @@ a.page-link-btn {
   height: 100%;
   margin: 10% auto;
   padding: 1em 1em 1em 1.5em;
+  box-sizing: border-box;
   display: flex;
   position: relative;
-  flex-direction: row;
-  color: #eeeeee;
-  background-color: #9F9C6C;
+  color: #FFF;
+  text-shadow: 1px 1px 1px #000, 2px 2px 5px #FFF, 1px 1px 1px #000;
+  font-size: 1.1em;
+  background-color: transparent;
+  border: 2px solid #f4f8dd;
   vertical-align: middle;
   border-radius: 5px;
   text-decoration: none;
+  transition: background-color 0.5s ease;
+  transition: color 0.5 ease, border-color 0.2s;
+  transition: text-shadow 0.7s ease, box-shadow 0.2s linear;
 }
 
-.page-link-btn:hover, .page-link-btn:focus {
-  background-color: #635F29;
-  text-shadow: 1px 1px 1px #000, 2px 2px 2px #fff; 
+a.page-link-btn:hover {
+  background-color: #f4f8dd;
+  color: #eee;
+  border-color: #6D5775;
+  text-shadow: 1px 1px 1px #000, 2.5px 2.5px 2.5px #fff, 3.5px 3.5px 3.5px #000;
+  box-shadow: 1px 1px 1px #000, 2px 2px 5px #fff, 3px 3px 5px #6D5775;
+  /* box-shadow: 1px 1px 1px #000, 3px 3px 3px #fff, 4px 4px 4px #000; */ 
 }
 
 .btn-content {
   width: 100%;
-  border: 1px solid gray;
-  border-radius: 6px;
-  display: table-cell;
   margin: 3%;
   padding: 3%;
 }
@@ -64,10 +77,9 @@ a.page-link-btn {
 .btn-text {
   vertical-align: middle;
   text-align: center;
-  height: 50%;
-  width: 79%;
+  padding-right: 10%;
   display: inline-flex;
-  font-size: 1.5em;
+  font-size: 2.8em;
   line-height: 1em;
   margin-top: auto;
   margin-bottom: auto;
