--- a/src/About.css
+++ b/src/About.css
@@ -1,6 +1,7 @@
 .label-wrap > div {
   width: 100%;
   padding: 0 15px;
+  margin-bottom: 7.5%;
   justify-content: flex-start;
   align-items: flex-start;
 }
@@ -16,6 +17,10 @@
   justify-content: flex-start;
 }
 
+.bullet-text {
+  margin-top: 4%;
+}
+
 .bullet-text > .label {
   font-weight: 500;
   font-size: 1.7em;
@@ -28,11 +33,63 @@ div.bullet-text > div.description {
 }
 
 .hex-wrap {
-
+  width: 100px;
+  height: 100px;
 }
 
 .hexagon {
+  position: relative;
+  width: 100px;
+  height: 57.80px;
+  background-color: #695481;
+  margin: 28.87px auto;
+}
 
+.hexagon::before, 
+.hexagon::after {
+  content: "";
+  position: absolute;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  z-index: -1;
+}
+
+.hexagon::before {
+  bottom: 100%;
+  left: 0;
+  border-bottom: 28.87px solid #695481;
+}
+
+.hexagon::after {
+  top: 100%;
+  right: 0;
+  border-top: 28.87px solid #695481;
+}
+
+.speedometer, .tablet, .thumbsup, .magic {
+  font-size: 0.5em;
+  color: white;
+}
+
+@keyframes flipInX {
+  0% {
+    transform: perspective(400px) rotateY(90deg);
+    opacity: 0;
+  }
+  40% {
+    transform: perspective(400px) rotateY(-20deg);
+  }
+  60% {
+    transform: perspective(400px) rotateY(10deg);
+    opacity: 1;
+  }
+  80% {
+    transform: perspective(400px) rotateY(5deg);
+  }
+  100% {
+    transform: perspective(400px);
+    opacity: 1;
+  }
 }
 
 .waypoint {
