--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,10 @@
   to { transform: rotate(360deg); }
 }
 
-.container {
+section .container {
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 10px;
   width: 100%;
   box-sizing: border-box;
 }
@@ -54,17 +55,12 @@ section:nth-of-type(1) {
   width: 100%;
 }
 
-.flex.row-gt-sm {
-  flex-direction: row;
-  padding: 0 15px;
-}
-
 .flex-50-gt-sm {
   flex: 1 1 50%;
   max-width: 50%;
   max-height: 100%;
   box-sizing: border-box;
-  display: block;
+  display: flex;
 }
 
 .header {
