--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -4,7 +4,7 @@ footer {
   left: 0;
   width: 100%;
   background: #6D5775;
-  padding: 6% 0 5% 0;
+  padding: 25% 0 20% 0;
 }
 
 .chevron-link-wrapper > svg:hover {
@@ -29,15 +29,20 @@ footer .icon-wrap .icon {
 
 .icon-wrap {
   text-align: center;
+  margin: 0 auto;
 }
 
 a.social-link {
-  margin: 0 15px;
+  margin: 0 4%;
   height: 55px;
   width: 55px;
   background: #50396C;
   cursor: pointer;
   position: relative;
+}
+
+a.social-link > i {
+  font-size: 55px;
 }
 
 a.social-link:hover {
@@ -72,7 +77,7 @@ a.social-link:hover .icon {
 
 .foot-note {
   color: #ddd;
-  margin-top: 5%;
+  margin-top: 10%;
 }
 
 .highlight {
