--- a/src/Contact/ContactForm.css
+++ b/src/Contact/ContactForm.css
@@ -1,14 +1,32 @@
+.form-wrap {
+  width: 90%;
+  margin: 10% auto;
+}
+
+@media screen and (min-width: 600px) {
+
+  .form-wrap {
+    width: 65%;
+  }
+}
+
 form.contact-form {
-  height: 50%;
-  padding: 3%;
+  margin: auto;
+  align-items: center;
   background-color: #F4F8DD;
   border: 2px solid #6D5775;
 }
 
+@media screen and (min-width: 900px) {
+
+  .form-wrap {
+    width: 50%;
+  }
+}
+
 .input-wrap {
-  width: 70%;
-  margin: 2% 0 0 0;
-  overflow: hidden;
+  width: 95%;
+  margin: 2%;
 }
 
 .name-input, .email-input {
@@ -23,7 +41,7 @@ form.contact-form {
 
 .message-input {
   width: 100%;
-  height: 7em;
+  height: 50%;
   box-sizing: border-box;
   line-height: 2;
   font-size: 14pt;
@@ -59,15 +77,14 @@ form.contact-form {
 }
 
 button.contact-btn {
-  width: 25%;
+  width: 100%;
   height: 13%;
   padding: 2%;
-  margin: 3% auto;
-  border-radius: 10px;
-  background-color: transparent;
+  margin: 0 auto;
+  background-color: #9F96A3;
   border: 2px solid #9F96A3;
   justify-content: center;
-  color: #666;
+  color: #FFF;
   font-size: 1.5em;
   text-decoration: none;
   transition: all 0.5s;
