Add tablet size media calls to fix layout

--- a/src/Projects/Slider.css
+++ b/src/Projects/Slider.css
@@ -11,6 +11,13 @@
   height: 200px;
 }
 
+@media screen and (min-width: 600px) {
+
+  .slider-wrapper {
+    height: 400px;
+  }
+}
+
 .slider-wrapper > div:first-child {
   margin-right: 2px;
 }
