--- a/src/Home/Hero.css
+++ b/src/Home/Hero.css
@@ -31,6 +31,21 @@ img.hero-bg {
 @media screen and (min-width: 600px) {
 
   .hero-content > div {
+    font-size: 3em;
+  }
+
+  div.hero-text-wrap {
+    margin: 0 auto;
+  }
+
+  .btn-text {
+    font-size: 1.5em;
+  }
+}
+
+@media screen and (min-width: 900px) {
+
+  .hero-content > div {
     font-size: 4em;
   }
 }
@@ -51,6 +66,13 @@ img.hero-bg {
   padding: 4% 2%;
   color: #E5C8B2;
   text-shadow: 1px 1px 1px #000, 5px 5px 6px #f4f8dd;
+}
+
+@media screen and (min-width: 600px) {
+
+  .name {
+    padding-top: 6%;
+  }
 }
 
 .title {
@@ -80,15 +102,24 @@ a.page-link-btn {
 @media screen and (min-width: 600px) {
 
   a.page-link-btn {
-    width: 30%;
-    height: 30%;
-    margin: 10% auto;
-    padding: 1em 1em 1em 1.5em;
+    width: 50%;
+    height: 35%;
+    margin: 5% auto;
     position: relative;
     border: 2px solid #f4f8dd;
     transition: background-color 0.5s ease;
     transition: color 0.5 ease, border-color 0.2s;
     transition: text-shadow 0.7s ease, box-shadow 0.2s linear;
+  }
+
+  a > .btn-content {
+    width: 100%;
+    font-size: 1.4em;
+    /* transform: scale(1, 1.5); */
+    /* -webkit-transform: scale(1, 1.5); /* Safari and Chrome */
+    /* -moz-transform: scale(1, 1.5); /* Firefox */
+    /* -ms-transform: scale(1, 1.5); /* IE 9+ */
+    /* -o-transform: scale(1, 1.5); */
   }
 }
 
@@ -114,16 +145,25 @@ a.page-link-btn {
   box-sizing: border-box;
   margin: 0 auto;
   padding: 5%;
-  line-height: 3em;
-
+  line-height: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .btn-text {
+  font-size: 1.1em;
   vertical-align: middle;
   text-align: center;
   margin-right: 7%;
   display: inline-block;
   margin-top: auto;
   margin-bottom: auto;
+  transform: scale(1, 1.5);
+  -webkit-transform: scale(1, 1.5); /* Safari and Chrome */
+  -moz-transform: scale(1, 1.5); /* Firefox */
+  -ms-transform: scale(1, 1.5); /* IE 9+ */
+  -o-transform: scale(1, 1.5);
 }
 .arrow-icon {
   width: 20%;
