--- a/src/Home/Hero.css
+++ b/src/Home/Hero.css
@@ -18,6 +18,20 @@ img.hero-bg {
   z-index: -99;
 }
 
+@media screen and (min-width: 900px) {
+
+  img.hero-bg {
+    height: 45em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+
+  img.hero-bg {
+    height: 55em;
+  }
+}
+
 .hero-content {
   color: white;
   position: absolute;
@@ -28,6 +42,16 @@ img.hero-bg {
   padding: 8% 0;
 }
 
+.hero-text-wrap {
+    margin: 10% 5%;
+}
+
+.hero-text-wrap > div {
+  display: block;
+  text-shadow: 1px 1px 1px #000, 3px 3px 3px #666;
+  text-align: center;
+}
+
 @media screen and (min-width: 600px) {
 
   .hero-content > div {
@@ -35,7 +59,7 @@ img.hero-bg {
   }
 
   div.hero-text-wrap {
-    margin: 0 auto;
+    margin: 2% auto;
   }
 
   .btn-text {
@@ -48,16 +72,10 @@ img.hero-bg {
   .hero-content > div {
     font-size: 4em;
   }
-}
 
-.hero-text-wrap {
-    margin: 10% 5%;
-}
-
-.hero-text-wrap > div {
-  display: block;
-  text-shadow: 1px 1px 1px #000, 3px 3px 3px #666;
-  text-align: center;
+  div.hero-text-wrap > div {
+    margin: 4% auto;
+  }
 }
 
 .name {
@@ -104,7 +122,7 @@ a.page-link-btn {
   a.page-link-btn {
     width: 50%;
     height: 35%;
-    margin: 5% auto;
+    margin: 2em auto;
     position: relative;
     border: 2px solid #f4f8dd;
     transition: background-color 0.5s ease;
@@ -126,7 +144,9 @@ a.page-link-btn {
 @media screen and (min-width: 900px) {
 
   a.page-link-btn {
+    margin-top: 2.3em;
     background-color: transparent;
+    font-size: 1.9em;
   }
 
   a.page-link-btn:hover {
