--- a/src/About/About.css
+++ b/src/About/About.css
@@ -95,6 +95,8 @@ div.bullet-text > div.description {
 
 .flex-50-gt-sm {
   width: 100%;
+  height: 100%;
+  align-self: flex-start;
 }
 
 .flex-50-gt-sm > div {
@@ -105,7 +107,7 @@ div.bullet-text > div.description {
   display: block;
 }
 
-@media screen and (min-width: 600) {
+@media screen and (min-width: 900px) {
 
   .flex-50-gt-sm {
     max-width: 50%;
@@ -118,10 +120,28 @@ div.bullet-text > div.description {
 
 .bio > .bio-text > .label.bold {
   font-size: 15pt;
+  max-width: 70%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .description {
   font-size: 8pt;
+  line-height: 1.5em;
+  max-width: 95%;
+  margin: 0 auto;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 600px) {
+
+  .description {
+    font-size: 11pt;
+  }
+}
+
+.description > a {
+  font-weight: 400;
 }
 
 .me {
@@ -129,24 +149,34 @@ div.bullet-text > div.description {
 }
 
 @media screen and (min-width: 900px) {
+
   .me {
     height: 300px;
   }
+
+  .description {
+    max-width: 80%; 
+  }
 }
 
- .skills-wrapper > .bars-wrap {
-    margin: 50px auto 0 auto;
-    width: calc(100% - 15px);
-    max-width: 90%;
+.skills-wrapper > .bars-wrap {
+  margin: 50px auto 0 auto;
+  width: calc(100% - 15px);
+  max-width: 90%;
 }
 
 .bars-wrap > .animated {
   width: 100%;
 }
 
+.bars-wrap > div > .bar:first-child {
+  margin-top: 0;
+  padding-top: 0;
+}
+
 @media screen and (min-width: 900px) {
 
-  section:nth-of-type(1).bars-wrap {
-    margin: 0 0 0 0;
+  .skills-wrapper > .bars-wrap {
+    margin-top: 0;
   }
 }
