--- a/src/Home/Hero.css
+++ b/src/Home/Hero.css
@@ -6,7 +6,6 @@
 .hero-image {
   width: 100%;
   height: 100%;
-
 }
 
 img.hero-bg {
@@ -16,6 +15,13 @@ img.hero-bg {
   left: 0;
   opacity: 0.25;
   z-index: -99;
+}
+
+@media screen and (min-width: 600) {
+
+  .hero-image > img.hero-bg {
+    height: 500px;
+  }
 }
 
 @media screen and (min-width: 900px) {
@@ -39,23 +45,24 @@ img.hero-bg {
   left: 0;
   width: 100%;
   height: 84%;
-  padding: 8% 0;
 }
 
 .hero-text-wrap {
-    margin: 10% 5%;
+  font-size: 1.3em;
+  margin: 10% 5%;
 }
 
 .hero-text-wrap > div {
   display: block;
-  text-shadow: 1px 1px 1px #000, 3px 3px 3px #666;
+  line-height: 1em;
+  text-shadow: 3px 3px 6px #000, 3px 3px 3px #666;
   text-align: center;
 }
 
 @media screen and (min-width: 600px) {
 
   .hero-content > div {
-    font-size: 3em;
+    font-size: 2em;
   }
 
   div.hero-text-wrap {
@@ -82,7 +89,7 @@ img.hero-bg {
   display: block;
   box-sizing: border-box;
   padding: 4% 2%;
-  color: #E5C8B2;
+  color: #624D8A;
   text-shadow: 1px 1px 1px #000, 5px 5px 6px #f4f8dd, 6px 6px 12px #000;
 }
 
@@ -90,6 +97,7 @@ img.hero-bg {
 
   .name {
     padding-top: 6%;
+    display: inline-block;
   }
 }
 
@@ -101,7 +109,7 @@ img.hero-bg {
 
 a.page-link-btn {
   width: 60%;
-  height: 30%;
+  height: 25%;
   box-sizing: border-box;
   vertical-align: middle;
   margin: 4% auto;
@@ -121,7 +129,7 @@ a.page-link-btn {
 
   a.page-link-btn {
     width: 40%;
-    height: 35%;
+    height: 27%;
     margin: 2em auto;
     position: relative;
     border: 2px solid #624D8A;
