Edit SliderArrow styles

--- a/src/Projects/SliderArrow.css
+++ b/src/Projects/SliderArrow.css
@@ -1,7 +1,7 @@
 .arrow-container {
   height: 100%;
   width: 6%;
-  background-color: #857698;
+  color: #857698;
 }
 
 .slider-btn {
@@ -10,8 +10,13 @@
   box-sizing: border-box;
   cursor: pointer;
   font-size: 25px;
-  color: #FFF;
   padding: 0;
+  opacity: 1;
+  color: #857698;
+}
+
+.slider-btn > i.fa {
+  color: #857698;
 }
 
 @media screen and (min-width: 900px) {
@@ -19,12 +24,20 @@
   .slider-btn {
     opacity: .4;
   }
+  
+  .slider-btn > i.fa {
+    color: #857698;
+  }
 
   .slider-btn:hover {
     opacity: 1;
     transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
     border: 0.5px solid grey;
     box-shadow:	0px 1px 3px 0px rgba(0, 0, 0, .3);
+  }
+  
+  .slider-btn:hover i.fa {
+    color: #857698;
   }
 }
 
