--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -1,8 +1,3 @@
-
-body: { 
-  overflow: hidden 
-}
-
 /* The modal wrapper: absolute positioning;
    100% of the browser window height and width.*/
 .modalOverlay {
@@ -15,7 +10,7 @@ body: {
   left: 0;
   bottom: 0;
   padding: 1rem;
-  background-color: rgba(0; 0; 0; 0.7);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 9999;
   opacity: 1;
   overflow-x: hidden;
@@ -25,15 +20,15 @@ body: {
 
 /* Fade-in open animation*/
 @keyframes show {
-  0%: {
+  0% {
     display: none;
     opacity: 0;
   };
-  1%: {
+  1% {
     display: flex;
     opacity: 0;
   };
-  100%: {
+  100% {
     opacity: 1;
   };
 };
@@ -42,10 +37,10 @@ body: {
 .modal {
   width: 100%;
   background-color: #fff;
-  box-shadow: [0; 0; 0.625rem; rgba(0; 0; 0; 0.2)];
+  box-shadow: 0, 0, 0.625rem, rgba(0, 0, 0, 0.2);
 };
 
-@media and (min-width: 576px): {
+@media (min-width: 576px) {
   .modal {
     width: 32rem;
   }
@@ -64,22 +59,23 @@ body: {
   border: 0;
   cursor: pointer;
   outline: 0;
-  box-shadow: 0, 0, 0.625rem, rgba(0; 0; 0; 0.2);
-
-  &:before &:after: {
-    content: "";
-    position: absolute;
-    top: 1.2rem;
-    left: 0.25rem;
-    width: 2rem;
-    height: 0.1rem;
-    background-color: #888;
-  };
-
-  &:before: { transform: rotate(45deg) }
-  &:after: { transform: rotate(-45deg) }
-
-  &:hover:before &:hover:after {
-    background-color: #444;
-  }
+  box-shadow: 0, 0, 0.625rem, rgba(0, 0, 0, 0.2);
 }
+
+.closeButton::before .closeButton::after {
+  content: "";
+  position: absolute;
+  top: 1.2rem;
+  left: 0.25rem;
+  width: 2rem;
+  height: 0.1rem;
+  background-color: #888;
+}
+
+.closeButton::before { transform: rotate(45deg) }
+.closeButton::after { transform: rotate(-45deg) }
+
+.closeButton:hover::before .closeButton::hover:after {
+  background-color: #444;
+}
+
