--- a/src/Modal/ModalLauncher.css
+++ b/src/Modal/ModalLauncher.css
@@ -1,15 +1,45 @@
 .modalButton {
-  padding: 0.7rem 1.8rem;
-  background-color: #568db2;
-  border: 0;
-  border-radius: 0.3rem;
-  font-size: 1rem;
-  color: #fff;
-  cursor: pointer;
-  margin-bottom: 0.8rem;
-  position: relative;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  bottom: 0;
+  width: 25%;
+  height: 13%;
+  margin: 0 auto;
+  border-radius: 10px;
+  background-color: #857698;
+  color: #FFF;
+  border: 2px solid #857698;
+  font-size: 0.5em;
+  justify-content: center;
+  text-decoration: none;
+  transition: all 0.5s;
 }
 
-.modalButton:hover: {
+/* .modalButton:hover: {
   background-color: #466d87;
+} */
+
+
+@media screen and (min-width: 600px) {
+
+  .modalButton {
+    font-size: 1em;
+    width: 20%
+  }
+}
+
+@media screen and (min-width: 900px) {
+
+  .modalButton {
+    background-color: transparent;
+    color: #666;
+  }
+
+  .modalButton:hover {
+    bottom: 24%;
+    background-color: #857698;
+    color: #FFF;
+  }
 }
