--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,10 @@
+/*
+  color scheme: 
+     base: dark charcoal (#222)
+     base-highlight: teal (#07BAC2)
+     highlight: magenta (#df1862)
+*/
+
 .App {
   text-align: center;
   position: static;
@@ -71,13 +78,13 @@ section:nth-of-type(1) .container {
 .header {
   font-size: 2.5em;
   text-transform: uppercase;
-  color: #6D5775;
+  color: #222;
   top: 0;
   background-color: #Fffef4;
 }
 
 .header-bar {
-  background-color: #6D5775;
+  background-color: #222;
   width: 70px;
   height: 4px;
   margin: 1em auto 6em auto;
