--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -6,10 +6,9 @@
 }
 
 nav{
-  background-color: #F5F9E1;
+  background-color: #21252E;
   width: 100%;
   height: 4em;
-  border-bottom: 3px solid #6D5775;
   text-align: left;
   z-index: 99;
 }
@@ -44,7 +43,7 @@ nav .link-wrap {
 }
 
 nav .active {
-  color: #6D5775;
+  color: #df1862;
   text-shadow: 1.3px 1.3px 2.1px #85758B, 0 0 1em #C7C3C9, 0 0 0.2em #C7C3C9;
 }
 
@@ -60,6 +59,6 @@ nav .active {
 }
 
 .page-link:hover {
-  color: #6D5775;
-  text-shadow: #FFE064 5px 0 10px;
+  color: #df1862;
+  text-shadow: #eee 2px 0 5px;
 } 
