--- a/src/Projects/SliderIndicator.css
+++ b/src/Projects/SliderIndicator.css
@@ -4,7 +4,7 @@
   height: 3px;
   padding: 10%;
   margin-left: 9px;
-  background-color: #857698;
+  background-color: #07BAC2;
   cursor: pointer;
   opacity: 0.15;
   transition: opacity .15s cubic-bezier(.4, 0, 1, 1);
