--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -69,13 +69,12 @@
   left: 0.25rem;
   width: 2rem;
   height: 0.1rem;
-  background-color: #888;
 }
 
 .closeButton::before { transform: rotate(45deg) }
 .closeButton::after { transform: rotate(-45deg) }
 
 .closeButton:hover::before .closeButton::hover:after {
-  background-color: #444;
+  background-color: #07BAC2;
 }
 
