--- a/src/Projects/Slider.css
+++ b/src/Projects/Slider.css
@@ -37,7 +37,7 @@ ul {
   box-sizing: border-box;
   max-width: 88%;
   height: 100%;
-  border: 2px solid #857698;
+  border: 2px solid #07BAC2;
 }
 
 .slider-indicators {
