--- a/src/Projects/SliderArrow.css
+++ b/src/Projects/SliderArrow.css
@@ -12,7 +12,7 @@
   font-size: 25px;
   padding: 0;
   opacity: 1;
-  background-color: #857698;
+  background-color: #07BAC2;
 }
 
 .slider-btn > i.fa {
