--- a/src/Contact/ContactForm.css
+++ b/src/Contact/ContactForm.css
@@ -13,8 +13,8 @@
 form.contact-form {
   margin: auto;
   align-items: center;
-  background-color: #F4F8DD;
-  border: 2px solid #6D5775;
+  background-color: #fff;
+  border: 2px solid #df1862;
 }
 
 @media screen and (min-width: 900px) {
@@ -37,6 +37,7 @@ form.contact-form {
   font-size: 14pt;
   padding: 3.5%;
   margin: 1% 0;
+  border: 0.5px solid #222;
 }
 
 .message-input {
@@ -47,6 +48,7 @@ form.contact-form {
   font-size: 14pt;
   padding: 1% 3.5% 3.5% 3.5%;
   margin: 1% 0;
+  border: 0.5px solid #222;
 }
 
 #success {
@@ -77,10 +79,9 @@ button.contact-btn {
   height: 13%;
   padding: 2%;
   margin: 0 auto;
-  background-color: #9F96A3;
-  border: 2px solid #9F96A3;
+  background-color: transparent;
   justify-content: center;
-  color: #FFF;
+  color: #07bac2;
   font-size: 1.5em;
   text-decoration: none;
   transition: all 0.5s;
@@ -88,5 +89,5 @@ button.contact-btn {
 
 button.contact-btn:hover {
   color: #FFF;
-  background-color: #9F96A3;
+  background-color: #07BAC2;
 }
