--- a/src/App/App.css
+++ b/src/App/App.css
@@ -80,7 +80,6 @@ section:nth-of-type(1) .container {
   text-transform: uppercase;
   color: #222;
   top: 0;
-  background-color: #Fffef4;
 }
 
 .header-bar {
@@ -102,3 +101,29 @@ section:nth-of-type(1) .container {
 /* .animated.slide-in-left {
   animation: fadeIn 3s ease;
 } */
+
+.modalOverlay h1, h2, p {
+  margin: 0;
+  padding: 2%;
+}
+
+
+.modal-link-btn {
+  border-radius: 10px;
+  padding: 1.7%;
+  
+  background-color: #df1862;
+  color: #FFF;
+  font-size: 1.5em;
+  text-shadow: 1px 1px 1px #000, 3px 3px 3px #666;
+  justify-content: center;
+  text-decoration: none;
+  position: absolute; 
+  bottom: 2;
+}
+
+.close-modal-btn {
+  position: absolute; 
+  bottom: 0;
+  right: 0;
+}
