--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -16,6 +16,6 @@
 
 .subtitle {
   margin: 2% 2% 6% 2%;
-  color: #222;
-  text-shadow: 1px 1px 1px #222, 3px 3px 4px #E1C1A9, 4px 4px 4px #493f55;
+  color: #07BAC2;
+  text-shadow: 0.5px 0.5px 0.5px #222, 2px 2px 3px #E1C1A9, 4px 4px 4px #493f55;
 }
