--- a/src/Contact/ContactForm.css
+++ b/src/Contact/ContactForm.css
@@ -84,6 +84,7 @@ button.contact-btn {
   color: #07bac2;
   font-size: 1.5em;
   text-decoration: none;
+  border: 0.5px solid #222;
   transition: all 0.5s;
 }
 
