--- a/src/Modal/ModalSlider.css
+++ b/src/Modal/ModalSlider.css
@@ -16,10 +16,21 @@
 }
 
 .carousel-container {
+  position: relative;
   display: flex;
-  margin: 0 0 20px 20px;
+  margin: 0 0;
 }
 
 .modal-slider-btn {
-  
+  position: absolute;
+  bottom: 0;
+  height: 10%;
+  width: 10%;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 25px;
+  padding: 0;
+  opacity: 1;
+  color: #fff;
+  background-color: #222;
 }
