Adjust section padding

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -33,7 +33,7 @@
 }
 
 section {
-  padding: 70px 0 70px 0;
+  padding: 30% 0 30% 0;
   color: #616161;
   line-height: 11pt;
   position: relative;
