--- a/src/App/App.css
+++ b/src/App/App.css
@@ -42,7 +42,7 @@ section {
 @media screen and (min-width: 600px) {
 
   section {
-    padding: 100px 0 130px 0;
+    padding: 20% 0 20% 0;
   }
 }
 
@@ -52,7 +52,6 @@ section:nth-of-type(1) {
 }
 
 section .container {
-  max-width: 1200px;
   margin: 0 auto;
   padding: 0 10px;
   width: 100%;
