--- a/src/Projects/Slide.css
+++ b/src/Projects/Slide.css
@@ -1,11 +1,11 @@
 .slide {
   height: 100%;
   width: 100%;
-  max-width: 900px;
   list-style-type: none;
   text-align: center;
   position: relative;
   box-shadow: 0 0 1rem rgba(0,0,0,.6);
+  z-index: -1;
 }
 
 .slide-active {
@@ -26,7 +26,7 @@
   transition: all 0.5s;
 }
 
-#gallery .card-text {
+.card-text {
   width: 100%;
   height: 30%;
   top: 0;
