--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,5 +1,5 @@
 #home {
-  min-height: 33em;
+  min-height: 80vh;
   display: flex;
   background-color: #21252E;
 }
@@ -15,6 +15,10 @@
 
 .canvas {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center;
+  align-items: center; */
   top: 0;
   left: 0;
   width: 100vw;
@@ -50,12 +54,17 @@
 }
 
 .home-text-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-size: 1.1em;
-  margin: 10% 5%;
+  margin: 0;
+  padding: 2%;
+  width: 100%;
 }
 
 .home-text-wrap > div {
-  display: block;
   text-shadow: 3px 3px 6px #000, 3px 3px 3px #666;
   text-align: center;
 }
@@ -87,26 +96,21 @@
 }
 
 .name {
-  display: block;
+  line-height: 2.7em;
   box-sizing: border-box;
-  padding: 1% 0.5% 6% 2%;
+  padding: 1% 0.5% 1% 1%;
   color: #df1862;
-  text-shadow: 1px 1px 1px #000, 3px 3px 4px #f4f8dd, 4px 4px 8px #000;
-}
-
-.greeting {
-  padding-bottom: 2%;
+  text-shadow: 1px 1px 1px #000, 2px 3px 2px #f4f8dd, 3px 3px 6px #000;
 }
 
 @media screen and (min-width: 600px) {
 
   .name {
-    padding-top: 6%;
     display: inline-block;
   }
 }
 
-.title {
+.text {
   box-sizing: border-box;
   width: 100%;
   overflow-wrap: break-word;
@@ -115,37 +119,32 @@
 }
 
 a.page-link-btn {
-  width: 60%;
-  height: 25%;
+  height: 20%;
+  width: 45vw;
   box-sizing: border-box;
   vertical-align: middle;
-  margin: 4% auto;
+  margin: 4% 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 10px;
   color: #FFF;
   text-shadow: 1px 1px 1px #000;
   text-decoration: none;
   background-color: #21252E;
+  border: 1px solid #eee;
 }
 
 @media screen and (min-width: 600px) {
 
   a.page-link-btn {
-    width: 40%;
-    height: 27%;
-    margin: 2em auto;
+    width: 30vw;
+    height: 10vh;
+    margin: 1% 0;
     position: relative;
-    border: 2px solid #eee;
-    transition: background-color 0.5s ease;
-    transition: color 0.5 ease, border-color 0.2s;
-    transition: text-shadow 0.3s ease, box-shadow 0.2s linear;
   }
 
   a > .btn-content {
     width: 100%;
-    font-size: 2vmax;
   }
 }
 
@@ -162,17 +161,17 @@ a.page-link-btn {
   a.page-link-btn:hover {
     background-color: #07BAC2;
     border-color: #6D5775;
-    text-shadow: 1px 1px 1px #000, 2.5px 2.5px 2.5px #fff, 3.5px 3.5px 3.5px #000;
+    text-shadow: 1px 1px 1px #000, 2.5px 2.5px 2.5px #fff;
+    transition: 0.4s ease-in-out;
   }
 }
 
 .btn-content {
-  width: 4vmax;
+  width: 100%;
   height: 90%;
   box-sizing: border-box;
-  margin: 0 auto;
-  padding: 5% 5% 5% 0;
   line-height: 2em;
+  font-size: 1.4em;
   display: flex;
   text-align: center;
   align-items: center;
@@ -180,18 +179,14 @@ a.page-link-btn {
 }
 
 .btn-text {
+  width: 70%;
   font-size: 3vmax;
   vertical-align: middle;
   text-align: center;
-  margin-right: 7%;
   display: inline-block;
   margin-top: auto;
   margin-bottom: auto;
-  transform: scale(1, 1.5);
-  -webkit-transform: scale(1, 1.5); /* Safari and Chrome */
-  -moz-transform: scale(1, 1.5); /* Firefox */
-  -ms-transform: scale(1, 1.5); /* IE 9+ */
-  -o-transform: scale(1, 1.5);
+
 }
 .arrow-icon {
   width: 20%;
