--- a/src/Modal/ModalSlider.css
+++ b/src/Modal/ModalSlider.css
@@ -1,8 +1,3 @@
-.slider-container {
-  max-height: 30vmax;
-
-}
-
 .modal-swipeable {
   width: 100%;
   position: relative;
@@ -10,15 +5,26 @@
 }
 
 .wrapper {
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .carousel-container {
   display: flex;
-  margin: 0 0 20px 20px;
+  margin: 0;
+  position: relative;
 }
 
 .modal-slider-btn {
-  
+  position: absolute;
+  opacity: 0;
+}
+
+.right {
+  right: 0;
+}
+
+.left {
+  left: 0;
 }
