--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -9,7 +9,7 @@
   right: 0;
   left: 0;
   bottom: 0;
-  padding: 1rem;
+  padding: 0;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 9999;
   opacity: 1;
