--- a/src/Projects/Slider.css
+++ b/src/Projects/Slider.css
@@ -8,16 +8,20 @@ ul {
   background-color: #f5f5f5;
 }
 
+.slider-wrapper {
+  width: 100vw;
+  overflow: hidden;
+  cursor: pointer;
+}
+
 .slider-container {
   display: flex;
   margin: 0;
   position: relative;
 }
 
-.slider-wrapper {
-  width: 100vw;
-  overflow: hidden;
-  cursor: pointer;
+.slide-wrapper {
+  width: 100%;
 }
 
 .slider-wrapper > div:first-child {
@@ -35,16 +39,6 @@ ul {
   height: 100%;
   border: 2px solid #07BAC2;
   position: relative;
-}
-
-@media screen and (min-width: 600px) {
-
-  .slider-wrapper {
-
-  }
-
-
-
 }
 
 .slider-indicators {
